Fixed overflowing on left column.

--- a/chat/src/client/styles/style.css
+++ b/chat/src/client/styles/style.css
@@ -117,7 +117,7 @@ h2 {
     margin: 0;
     padding: 0;
     text-align: center;
-    line-height: 59px;
+    line-height: 50px;
     font-size: 14px;
 }
 
